# Jarvis

./: .env.example  .gitignore  CLAUDE.md  JARVIS.md  JARVIS_AGENT_AND_BENCHMARK_CODEX_SPEC_v2.md  README.md  clean_pycache.py  clean_sessions.py  main.py  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.base.json  turbo.json  verify-models.cjs
benchmarks/: README.md  __init__.py  case_schema.py  export_answer_checklist.py  run_benchmark.py
config/: jarvis.json
docs/: Jarvis.md  architecture.md  chat_direct_answer.md  input_handling_architecture.md  jarvis_cli_convergence_plan.md  jarvis_md_reference.md  web_control_surface.md
jarvis/: __init__.py  cli.py  cli_agent_output.py  cli_command_map.py
jarvis_tui/: package-lock.json  package.json  tsconfig.json
jsonschema/: __init__.py
memory/: RESEARCH_LOG.md
scripts/: check-doc-consistency.ts  check_llm_api.py  clean_pycache.py  cli_smoke_lib.py  create_skill.py  diag_agent_pipeline.py  diagnose_import_paths.py  init_jarvis_md.py  inspect_intent_route.py  inspect_repo_readonly.py  install.ps1  install.sh  mcp-plugin-smoke.ts  natural_language_test_cases.py  prepare_swebench_lite.py  run_comparable_gate.py  run_gap_closure_benchmark.py  run_minimal_agent_loop_demo.py  run_swebench_lite_smoke.py  smoke_agent_tool_loop_cli.py  smoke_agent_tool_loop_cli_integration.py  smoke_agent_tool_loop_e2e.py  smoke_cli_coding_library_project.py  smoke_cli_command_surface.py  smoke_cli_full_capability_bench.py  smoke_cli_natural_ux.py  smoke_cli_real_use_fuzz.py  smoke_coding_creation_intent.py  smoke_coding_fixture.py  (+9 more)
(+1101 files in other folders)
