[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis"
version = "22.0.0"
description = "Jarvis — Local-first AI coding agent in your terminal"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Terialion"}
]
keywords = ["ai", "coding-agent", "cli", "terminal", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "rich>=13",
    "prompt-toolkit>=3",
    "pydantic>=2",
    "python-dotenv>=1",
    "httpx>=0.27",
    "jsonschema>=4",
    "requests>=2",
    "numpy>=1",
    "openpyxl>=3",
    "playwright>=1.40",
    "tiktoken>=0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6",
]

[project.scripts]
jarvis = "jarvis.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
jarvis = ["*.json", "*.yaml", "*.yml", "*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra -q --strict-markers"
